SE LOGRA CONECCION CON BBDD

--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.LogToFile=org.apache.log4j.RollingFileAppender
 log4j.appender.LogToFile.ImmediateFlush=true
 log4j.appender.LogToFile.Append=true
 #Log File
-log4j.appender.LogToFile.File=./LOG/ServicioLexAndroid-1.0.log
+log4j.appender.LogToFile.File=c:/LOG/ServicioLexAndroid-1.0.log
 log4j.appender.LogToFile.MaxFileSize=2MB
 log4j.appender.LogToFile.MaxBackupIndex=5
 log4j.appender.LogToFile.layout=org.apache.log4j.PatternLayout
