--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-j2ee.server.domain=C:/Users/jfuentealba/Desktop/server_notaria
-j2ee.server.home=C:/fwk-latam-2/Dist/_wls12210/wlserver
-j2ee.server.instance=deployer:WebLogic:http://localhost:7001:C:\\fwk-latam-2\\Dist\\_wls12210\\wlserver:C:\\Users\\jfuentealba\\Desktop\\server_notaria
-j2ee.server.middleware=C:/fwk-latam-2/Dist/_wls12210
-user.properties.file=C:\\Users\\jfuentealba\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=C:/Users/Joaquin/Desktop/domainNotaria
+j2ee.server.home=C:/fwk-latam-2/_wls12210/wlserver
+j2ee.server.instance=deployer:WebLogic:http://localhost:7001:C:\\fwk-latam-2\\_wls12210\\wlserver:C:\\Users\\Joaquin\\Desktop\\domainNotaria
+j2ee.server.middleware=C:/fwk-latam-2/_wls12210
+user.properties.file=C:\\Users\\Joaquin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
