--- a/config/config.properties
+++ b/config/config.properties
@@ -2,7 +2,7 @@ daysDelete=90
 
 ##Base de datos lex
 driver=oracle.jdbc.driver.OracleDriver
-connection_url=jdbc:oracle:thin:@192.243.109.159:1521:XE
+connection_url=jdbc:oracle:thin:@192.243.109.159:1521s:XE
 username=DUOC_USER2
 password=portafolio2018
 
