Se agrega funciones para detalle de presupuesto

--- a/config/config.properties
+++ b/config/config.properties
@@ -2,9 +2,13 @@ daysDelete=90
 
 ##Base de datos lex
 driver=oracle.jdbc.driver.OracleDriver
-connection_url=jdbc:oracle:thin:@192.243.109.159:1521s:XE
-username=DUOC_USER2
-password=portafolio2018
+#connection_url=jdbc:oracle:thin:@192.243.109.159:1521:XE
+#username=DUOC_USER2
+#password=portafolio2018
+
+connection_url=jdbc:oracle:thin:@environmentdev.ck9mpe2ged7m.us-east-2.rds.amazonaws.com:1521:ORACLEDB
+username=devUsr
+password=y4m1l3sr0V
 
 ## Desarrollo
 connection_url_oper=jdbc:oracle:thin:@OPER_DESA.DBO.LAN.COM:1534:OPER
